# lockne

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
benchmarks/: comprehensive_bench.sh  quick_bench.py  quick_bench.sh  run_benchmarks.sh  simple_bench.sh
benchmarks/results/: bench_20260102_200336.json  bench_final_20260102.json  benchmark_20260102_173942.txt  benchmark_20260102_173942.txt.csv  benchmark_20260102_174027.txt  benchmark_20260102_174027.txt.csv  comprehensive_20260102_201042.txt  final_results.txt  packet_capture_proof.txt  throughput_benchmark.txt
client/: Cargo.toml
code/: Cargo.toml  DEVELOPMENT.md  GETTING_STARTED.md  README.md  RESEARCH_EXISTING_CONNECTIONS.md  ROADMAP.md  TESTING.md  rust-toolchain.toml  test_tracking.sh  verify_tracking.sh
code/lockne/: Cargo.toml  build.rs
code/lockne-common/: Cargo.toml
code/lockne-common/src/: lib.rs
code/lockne-common/tests/: types_test.rs
code/lockne-ebpf/: Cargo.toml
code/lockne-ebpf/src/: main.rs
code/lockne/src/: config.rs  lib.rs  loader.rs  logger.rs  main.rs  runner.rs  ui.rs
code/lockne/tests/: integration_test.rs
lockne-client/: Cargo.toml
lockne-lib/: Cargo.toml
lockne-server/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
thesis/: master_thesis.typ  presentation.typ  proposal.typ  references.bib
thesis/chapters/: 01-introduction.typ  02-objectives.typ  03-literature-review.typ  04-practical-part.typ  05-results.typ  06-conclusion.typ  07-references.typ
