[package]
name = "lockne"
version = "0.1.0"
edition = "2024"
authors = ["Artoghrul Gahramanli <arto@gahr.io>"]
description = "Dynamic Per-Application VPN Tunneling with eBPF and Rust"
license = "MIT"
repository = "https://github.com/artogahr/lockne"
homepage = "https://github.com/artogahr/lockne"
documentation = "https://docs.rs/lockne"
readme = "README.md"
keywords = ["vpn", "ebpf", "networking", "wireguard", "tui"]
categories = ["network-programming", "system"]

[dependencies]
aya = "*"

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true
