[package]
name = "lockne-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
lockne-common = { path = "../lockne-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "lockne"
path = "src/main.rs"
